--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,13 @@
             "dacoto\\LaravelInstaller\\": "src/"
         }
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "dacoto\\LaravelInstaller\\Providers\\LaravelVueDashboardInstallerProvider"
+            ]
+        }
+    },
     "license": "MIT",
     "authors": [
         {
