--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,8 @@
     "type": "library",
     "require": {
         "php": "^7.2.5",
-        "laravel/framework": "^7.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^8.4|^9.0"
+        "laravel/framework": "^7.0",
+        "jackiedo/dotenv-editor": "^1.1"
     },
     "autoload": {
         "psr-4": {
