--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": "^7.3",
         "laravel/framework": "^7.0",
-        "jackiedo/dotenv-editor": "^1.1"
+        "jackiedo/dotenv-editor": "^1.1",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
