--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "php": "^7.3",
         "laravel/framework": "^7.0",
         "ext-json": "*"
+        "sixlive/dotenv-editor": "^1.2"
     },
     "autoload": {
         "psr-4": {
