--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "library",
     "require": {
         "php": "^7.3",
-        "laravel/framework": "^7.0",
-        "ext-json": "*"
+        "ext-json": "*",
+        "laravel/framework": "^8.0",
         "sixlive/dotenv-editor": "^1.2"
     },
     "autoload": {
