--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "require": {
         "php": "^7.3",
         "ext-json": "*",
-        "laravel/framework": "^8.0",
-        "sixlive/dotenv-editor": "^1.2"
+        "laravel/framework": "^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
