--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "require": {
         "php": "^7.3",
         "ext-json": "*",
+        "dacoto/laravel-setenv": "^1.0",
         "laravel/framework": "^7.0|^8.0"
     },
     "autoload": {
