Added php v8 compatibility

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: PHP Syntax Checker
+      - name: PHP 7.3 Syntax Checker
         uses: StephaneBour/actions-php-lint@7.3
+
+      - name: PHP 8.0 Syntax Checker
+        uses: StephaneBour/actions-php-lint@8.0
