--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
     "description": "Laravel dashboard auto-installer package",
     "type": "library",
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "ext-json": "*",
-        "dacoto/laravel-setenv": "^1.0",
+        "dacoto/laravel-setenv": "^2.0",
         "laravel/framework": "^7.0|^8.0"
     },
     "autoload": {
