--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,22 @@
 {
-    "name": "dacoto/laravel-dashboard-installer",
-    "description": "Laravel dashboard auto-installer package",
+    "name": "dacoto/laravel-wizard-installer",
+    "description": "Laravel wizard installer package",
     "type": "library",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.4|^8.0",
         "ext-json": "*",
-        "dacoto/laravel-setenv": "^2.0",
-        "laravel/framework": "^7.0|^8.0"
+        "laravel/framework": "^7.0|^8.0",
+        "dacoto/laravel-setenv": "^2.1"
     },
     "autoload": {
         "psr-4": {
-            "dacoto\\LaravelInstaller\\": "src/"
+            "dacoto\\LaravelWizardInstaller\\": "src/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "dacoto\\LaravelInstaller\\Providers\\LaravelDashboardInstallerProvider"
+                "dacoto\\LaravelWizardInstaller\\Providers\\LaravelWizardInstallerProvider"
             ]
         }
     },
