feat: adjusted installation commands & versions

--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
     "description": "Laravel wizard installer package",
     "type": "library",
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0",
         "ext-json": "*",
-        "laravel/framework": "^7.0|^8.0",
+        "laravel/framework": "^9.0",
         "dacoto/laravel-setenv": "^2.2"
     },
     "autoload": {
